# cw4_jobs_parser

./: README.md  main.py  pyproject.toml
classes/: abstract.py  hh.py  saver.py  sj.py  vacancy.py
functions/: ui.py
